<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NMedia</string>
    <string name="text">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_save" translatable="false">Post save</string>
    <string name="description_post_edit" translatable="false">Post edit</string>
    <string name="description_likes" translatable="false">Post like</string>
    <string name="description_share" translatable="false">Post share</string>
    <string name="add_post" translatable="false">Add post</string>

    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>

    <string name="remove">Remove</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="Text_for_hint">Вы ничего не ввели!</string>
    <string name="Edit_post_cancel_edit">Редактирование поста</string>
    <string name="share_intent" translatable="false">Share post</string>
    <string name="play_video" translatable="false">Play video</string>
    <string name="author_name" translatable="false">Нетология</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string >
    <string name="notification_new_post">%1$s создал новый пост: %2$s</string >
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="attachments">Attachments</string>
    <string name="try_again_server_error">ОБНОВИТЬ</string>

    <string name="no_network">Нет сети</string>
    <string name="unknown_exception">Что-то пошло не так :(</string>
    <string name="news">Новости</string>
    <string name="interested">Интересное</string>
    <string name="new_posts">Свежие записи</string>
    <string name="description_select_photo">description_select_photo</string>
    <string name="description_take_photo">description_take_photo</string>
    <string name="description_photo">description_photo</string>
    <string name="menu_save">Save</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="cancel">Отменить</string>
    <string name="sign_in_exception_message">Не получается войти. Скорее всего не верный логин или пароль.</string>
    <string name="sign_up_exception_message">Не получается зарегистрироваться.</string>
    <string name="login_pass_input">Введите логин и пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="cancel_button">отмена</string>
    <string name="username_input">Введите логин</string>
    <string name="password_input">Введите пароль</string>
    <string name="register_title">Регистрация</string>
    <string name="password_reg_confirm">Подтвердите пароль</string>
    <string name="reg_button">РЕГИСТРАЦИЯ</string>
    <string name="username_reg">Введите имя</string>

</resources>